--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,7 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.nav-link {
+  @apply text-blue-500 hover:text-blue-700 transition duration-200; 
+}
